# board_game_app

./: manage.py  pyproject.toml
board_game_django/: asgi.py  settings.py  urls.py  wsgi.py
