[tool.poetry]
name = "board-game-django"
version = "0.1.0"
description = ""
authors = ["Sofya <SofiaTal@mail.ru>"]
readme = "README.md"
packages = [{ include = "board_game_django" }]

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.0.1"
djangorestframework = "^3.14.0"
psycopg2 = "^2.9.9"
django-environ = "^0.11.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
